load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "commander.go",
        "coordinator.go",
        "statestore.go",
        "util.go",
    ],
    importpath = "github.com/lytics/metafora/embedded",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "//statemachine:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "commander_test.go",
        "embedded_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//:go_default_library",
        "//statemachine:go_default_library",
    ],
)
