load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["httputil.go"],
    importpath = "github.com/lytics/metafora/httputil",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "//statemachine:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["httputil_test.go"],
    embed = [":go_default_library"],
    deps = ["//:go_default_library"],
)
