load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "commander.go",
        "doc.go",
        "errors.go",
        "statemachine.go",
        "statestore.go",
    ],
    importpath = "github.com/lytics/metafora/statemachine",
    visibility = ["//visibility:public"],
    deps = ["//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "errors_test.go",
        "run_test.go",
        "statemachine_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//:go_default_library",
        "//embedded:go_default_library",
    ],
)
