load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/lytics/metafora/examples/koalemosctl",
    visibility = ["//visibility:private"],
    deps = [
        "//examples/koalemos:go_default_library",
        "//metcdv3:go_default_library",
        "@io_etcd_go_etcd//clientv3:go_default_library",
    ],
)

go_binary(
    name = "koalemosctl",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
